<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".gui.main.charactercreator.AbilityScoresFragment">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:barrierDirection="end"
            app:constraint_referenced_ids="ability_scores_str_label, ability_scores_dex_label, ability_scores_con_label, ability_scores_int_label, ability_scores_wis_label, ability_scores_cha_label" />

        <!-- ROLL DICE BUTTON -->
        <Button
            android:id="@+id/ability_scores_roll_dice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ability_scores_roll_dice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- STRENGTH -->
        <TextView
            android:id="@+id/ability_scores_str_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/ability_scores_str"
            android:text="@string/attribute_strength"
            app:layout_constraintBaseline_toBaselineOf="@id/ability_scores_str"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ability_scores_str"
            style="@style/AppTheme.Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/ability_scores_roll_dice" />

        <!-- DEXTERITY -->
        <TextView
            android:id="@+id/ability_scores_dex_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/ability_scores_dex"
            android:text="@string/attribute_dexterity"
            app:layout_constraintBaseline_toBaselineOf="@id/ability_scores_dex"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ability_scores_dex"
            style="@style/AppTheme.Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/ability_scores_str" />

        <!-- CONSTITUTION -->
        <TextView
            android:id="@+id/ability_scores_con_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/ability_scores_con"
            android:text="@string/attribute_constitution"
            app:layout_constraintBaseline_toBaselineOf="@id/ability_scores_con"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ability_scores_con"
            style="@style/AppTheme.Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/ability_scores_dex" />

        <!-- INTELLIGENCE -->
        <TextView
            android:id="@+id/ability_scores_int_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/ability_scores_int"
            android:text="@string/attribute_intelligence"
            app:layout_constraintBaseline_toBaselineOf="@id/ability_scores_int"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ability_scores_int"
            style="@style/AppTheme.Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/ability_scores_con" />

        <!-- WISDOM -->
        <TextView
            android:id="@+id/ability_scores_wis_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/ability_scores_wis"
            android:text="@string/attribute_wisdom"
            app:layout_constraintBaseline_toBaselineOf="@id/ability_scores_wis"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ability_scores_wis"
            style="@style/AppTheme.Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/ability_scores_int" />

        <!-- CHARISMA -->
        <TextView
            android:id="@+id/ability_scores_cha_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/ability_scores_cha"
            android:text="@string/attribute_charisma"
            app:layout_constraintBaseline_toBaselineOf="@id/ability_scores_cha"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ability_scores_cha"
            style="@style/AppTheme.Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/ability_scores_wis" />

        <!-- PREV BUTTON -->
        <Button
            android:id="@+id/ability_scores_navigate_previous_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ability_scores_navigate_previous_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ability_scores_cha" />

        <!-- CREATE BUTTON -->
        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_button_label"
            app:layout_constraintTop_toBottomOf="@id/ability_scores_navigate_previous_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
