...
    <string name="combat_cmd_label">CMD:</string>
    <string name="combat_initiative_label">Initiative:</string>
    <string name="create_name_label">Name</string>
    <string name="create_player_label">Player</string>
    <string name="create_gender_label">Gender</string>
    <string name="create_alignment_label">Align</string>
    <string name="create_button_label">Create</string>

    <!-- SkillPageFragment -->
    <string name="page_skill_title">Skills</string>
    <string name="skill_list_max_ranks">Max Ranks</string>
    <string name="skill_list_skill_points">Skill points</string>
    <string name="skill_list_skill_points_of">of</string>
...

    <!-- AppearanceScreen -->
    <string name="appearance_screen_title">"Appearance (step 3 of 5)"</string>

    <!-- AbilityScoresScreen -->
    <string name="ability_scores_screen_title">Ability Scores (step 4 of 5)</string>
    <string name="ability_scores_screen_roll_dice">Roll Dice (4d6)</string>

    <!-- EquipmentComposeFragment -->
    <string name="equipment_screen_title">"Equipment (step 5 of 5)"</string>
    <string name="equipment_screen_missing_message">"The starting equipment for this class is missing. If you have suggestions for the starting equipment, please send them to torsten.wiederkehr@gmail.com."</string>

    <!-- GameSystemSelector -->
...
