<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".gui.main.charactercreator.RaceAndClassFragment">


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:barrierDirection="end"
            app:constraint_referenced_ids="create_class_label,create_player_label" />

        <!-- NAME -->
        <TextView
            android:id="@+id/create_name_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/create_name"
            android:text="@string/create_name_label"
            app:layout_constraintBaseline_toBaselineOf="@id/create_name"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/create_name"
            style="@style/AppTheme.Edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:width="200dip"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- PLAYER -->
        <TextView
            android:id="@+id/create_player_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/create_player"
            android:text="@string/create_player_label"
            app:layout_constraintBaseline_toBaselineOf="@id/create_player"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/create_player"
            style="@style/AppTheme.Edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/create_name" />

        <!-- RACE -->
        <TextView
            android:id="@+id/create_race_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_race_label"
            app:layout_constraintBaseline_toBaselineOf="@id/create_race"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/create_race"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/create_player" />

        <!-- SEX -->
        <TextView
            android:id="@+id/create_sex_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_sex_label"
            app:layout_constraintBaseline_toBaselineOf="@id/create_sex"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/create_sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/create_race" />

        <!-- ALIGNMENT -->
        <TextView
            android:id="@+id/create_alignment_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_alignment_label"
            app:layout_constraintBaseline_toBaselineOf="@id/create_alignment"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/create_alignment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/create_sex" />

        <!-- CLASS -->
        <TextView
            android:id="@+id/create_class_label"
            style="@style/AppTheme.TableCellString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_class_label"
            app:layout_constraintBaseline_toBaselineOf="@id/create_class"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/create_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/create_alignment" />

        <!-- NEXT BUTTON -->
        <Button
            android:id="@+id/race_and_class_navigate_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_and_class_navigate_next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_class" />

        <!-- CREATE BUTTON -->
        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_create_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/race_and_class_navigate_next_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>