...

            <TextView
                style="@style/AppTheme.TableCellString"
                android:text="@string/attribute_str" />

            <TextView
                android:id="@+id/attribute_str_value"
                style="@style/AppTheme.TableCellNumber" />

            <Button
                android:id="@+id/attribute_str_mod"
                style="@style/AppTheme.ButtonDieRoll" />
        </TableRow>
...
